# jitsu

./: .gitignore  .jitsurules  .pre-commit-config.yaml  .vulture_whitelist.py  JustFile  README.md  TEMPLATE_mcp_config.json  pyproject.toml  test_plan.py
docs/: CLI Reference.md  Epic 4 and 5 Roadmap.md  Jitsu Architecture Overview.md  Jitsu Roadmap.md  Lead Dev Understanding.md  MCP Tools Reference.md  Potential_RoadmapToV3.md  Project Understanding.md  ROADMAP.md  Update after Epic 2.md  index.md  jitsu_get_next_phase.md  jitsu_orchestrator_prompt.md  tool_jitsu_get_next_phase.md
docs/architecture/: landscape.md  layer_0_domain.md  layer_1_core.md  layer_1_providers.md  layer_2_core.md  layer_2_providers.md  layer_3_transport.md
docs/audit_v2/: cli_audit_report.md  core_audit_report.md  executive_summary.md  models_audit_report.md  providers_audit_report.md  server_audit_report.md
docs/module_audit/: audit_report_v1.md  cli_audit_report.md  core_audit_report.md  models_audit_report.md  providers_audit_report.md  server_audit_report.md  templates_audit_report.md  utils_audit_report.md
docs/perplexity_research/: constraint_enforcement.md  loop_retry.md  ushape_attention.md
docs/reference/: cli.md  mcp_tools.md
epics/completed/: cli-epic-save-path-refactor.json  core-dependency-injection.json  epic-12-git-diff.json  epic-16-test-repairs.json  epic-23-autonomous-execution.json  epic-26-architectural-audit.json  epic-audit-tests.json  epic-branch-quarantine.json  epic-cli-api-refinement.json  epic-cli-decoupling.json  epic-core-prompt-management.json  epic-executor-tool-calling-phase2.json  epic-executor-tool-calling.json  epic-extract-handlers.json  epic-extract-model-config.json  epic-foundation-models.json  epic-mcp-server-decoupling.json  epic-orchestrator-retry-budget.json  epic-planner-integration.json  epic-prompt-integration.json  epic-provider-decoupling.json  epic-recovery-loop-v1.json  epic-recovery-refinement.json  epic-search-and-destroy.json  epic-tech-debt-zero.json  epic-traceback-context-expansion.json  epic-u-curve-architecture.json  epic-v2-audit-summary.json  epic-widen-module-scope.json  epic-wiki.json  epic20-integrity-and-docs.json  epic9.5-phase1.json  epic9.json  slim-refactor.json  test_ast.json
epics/completed/v0.1.0/: agent_output.md  epic-15-run-command.json  epic-21-verbose-debugging.json  epic-24-executor-errors.json  epic-25-auto-resume.json  epic1.json  epic13-queue-management.json  epic1_phase1.md  epic2.json  epic2_phase1_design.md  epic4.5.json  epic5.5.json  epic8.json  epic_20260311_153531.json
epics/current/: add-agent-plan-tool.json  add-anthropic-llm-support.json  add-fast-flag-skip-tests.json  add-mcp-tool-check-coverage.json  add-mcp-tool-check-coverage_V1.json  add-quiet-flag.json  ast-auto-refactor-toolkit.json  cli-planner-context-injection.json  epic-17-self-orchestration.json  epic-18-init-command.json  epic-realign-layers.json  epic-resume-orchestration.json  epic10.json  epic11.json  epic14-file-lifecycle.json  epic3.json  epic4.json  epic5.json  epic6.json  epic7.json  epic9.5.json  expose-ast-transformer-as-mcp-tools.json  fix-inline-type-ignore-handlers.json  integrate-pytest-xdist.json  orchestrator-sqlite-state.json  planner-status-updates.json  pydantic-validator-integrity.json  self-documenting-workflow.json  upgrade-jitsu-mcp-parallel-verification.json  v0-5-0-documentation-update.json  vulture-test-cleanup.json
epics/documentation/: epic.json
epics/planned/: epic-17-self-orchestration.json  epic-26-executor-rollback.json  epic-27-architectural-consolidation.json  epic-v040-landscape.json
src/: __init__.py
src/jitsu/: __init__.py  cli.py  config.py  prompts.py
src/jitsu/cli/: __init__.py  main.py
src/jitsu/core/: __init__.py  client.py  compiler.py  executor.py  orchestrator.py  parser.py  planner.py  runner.py  state.py  storage.py
src/jitsu/models/: __init__.py  core.py  execution.py
src/jitsu/providers/: __init__.py  ast.py  base.py  env.py  file.py  git.py  markdown.py  pydantic.py  registry.py  tree.py
src/jitsu/server/: __init__.py  client.py  handlers.py  ipc.py  mcp_server.py  registry.py
src/jitsu/templates/: __init__.py  justfile.tmpl  loader.py  rules.md
src/jitsu/utils/: __init__.py  audit.py  logger.py  path.py  traceback_parser.py
tests/: test_config.py
tests/cli/: __init__.py  test_main.py
tests/core/: __init__.py  test_client.py  test_compiler.py  test_executor.py  test_executor_expansion.py  test_orchestrator.py  test_planner.py  test_runner.py  test_state.py  test_storage.py
tests/models/: __init__.py  test_core.py  test_execution.py
tests/providers/: __init__.py  test_ast.py  test_ast_transformer.py  test_base.py  test_env.py  test_file.py  test_git.py  test_markdown.py  test_pydantic.py  test_tree.py
tests/server/: __init__.py  test_ast_handlers.py  test_handlers.py  test_ipc.py  test_registry.py  test_server.py
tests/utils/: __init__.py  test_audit.py  test_logger.py  test_path.py  test_traceback_parser.py
